# function-faas-valuation

./: .gitignore  README.md  pyproject.toml  requirements.txt
extraction_results/: extraction_20250703184431.json  extraction_20250703193446.json
fass-valuation-extract/: __init__.py  function.json  model.py  ocr_service.py  service.py  utils.py  write_json.py
fass-valuation-extract/models/: entites_models.py
fass-valuation-extract/services/: extract.py  upload_file_service.py
fass-valuation-extract/utils/: token_counter.py
fass-valuation-get-binaries/: __init__.py  function.json
fass-valuation-upload/: __init__.py  function.json
fass-valuation-upload/models/: file_models.py  response_models.py
fass-valuation-upload/services/: extract.py  upload_file_service.py
function_app/: __init__.py
function_app/models/: file_models.py  response_models.py  token_models.py
function_app/services/: file_processor.py  token_counter.py  upload_file_service.py
function_app/utils/: token_counter.py
